docs: update header title to reflect brand name in manifesto

--- a/public/manifesto.html
+++ b/public/manifesto.html
@@ -21,7 +21,7 @@
 
         <header class="text-center mb-10">
             <h1 class="text-5xl font-extrabold text-sky-400 mb-4 tracking-tight">
-                Construa o Futuro da Tech Conosco
+                Construa o Futuro da MeuGPS.tech
             </h1>
             <p class="text-lg text-gray-300">
                 Uma startup de tecnologia nascida da paixão e do talento da faculdade.
