docs: add initial meugps-labs pptx and pdf

--- a/public/quemsomos.html
+++ b/public/quemsomos.html
@@ -83,6 +83,25 @@
         </div>
     </section>
 
+    <section id="valores" class="py-20 bg-zinc-950">
+        <div class="container mx-auto px-6 grid md:grid-cols-2 gap-16 items-center">
+            <div class="flex justify-center">
+                <div class="relative w-64 h-64 rounded-full bg-blue-600/10 flex items-center justify-center border border-blue-500/20">
+                    <img src="logo_proveta.png" alt="MeuGPS Lab Logo" class="w-48 h-48">
+                </div>
+            </div>
+            <div>
+                <h3 class="text-3xl font-bold mb-6">Nossa Especialidade</h3>
+                <ul class="space-y-4 text-gray-400 text-lg">
+                    <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Open Hardware (ESP32 / Arduino)</li>
+                    <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Sistemas Operacionais Linux</li>
+                    <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Cyber Security & Criptografia</li>
+                    <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Telemetria de Baixa Latência</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <footer class="py-12 border-t border-gray-800 text-center">
         <p class="text-gray-500 text-sm">
             &copy; 2026 MeuGPS Labs - Unidade de Telemetria Avançada. <br>
